[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dialogue.gd" type="Script" id=1]

[node name="Dialogue" type="PanelContainer"]
margin_right = 203.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 196.0
margin_bottom = 461.0

[node name="Button" type="Button" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 196.0
margin_bottom = 27.0
size_flags_vertical = 2
text = "ADD"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
