[gd_scene load_steps=3 format=2]

[ext_resource path="res://dialogue/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://dialogue/TemplateScrollContainer.gd" type="Script" id=2]

[node name="Dialogue" type="PanelContainer"]
margin_right = 203.0
margin_bottom = 468.0
rect_clip_content = true
size_flags_horizontal = 12
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 196.0
margin_bottom = 461.0
grow_horizontal = 2
grow_vertical = 2

[node name="TemplateScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 189.0
margin_bottom = 454.0
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TemplateScrollContainer"]
[connection signal="template_selected" from="VBoxContainer/TemplateScrollContainer" to="." method="_on_Template_selected"]
